update timeline with the responsive

--- a/index.html
+++ b/index.html
@@ -140,93 +140,108 @@ Get started
         </div>
       </div>
     </section>
-    <section id="experience" class="py-24">
-      <div class="max-w-7xl mx-auto px-6 lg:px-12">
-        <h2 class="text-4xl font-extrabold heading-font text-center text-[#275891] mb-12">Rekam Jejak Organisasi</h2>
-        <div class="mt-16 grid gap-12 md:grid-cols-2 lg:grid-cols-3">
-          <!-- Column 1 -->
-          <ol class="relative pl-10">
-            <span class="absolute left-4 top-0 bottom-0 w-px bg-[#171614]"></span>
-            <li class="relative mb-12">
-              <span class="absolute -left-3 top-1 h-3.5 w-3.5 rounded-full bg-[#a23e48]"></span>
-              <time class="block text-xs tracking-widest text-[#171614] font-semibold"">02.2023 – 12.2023</time>
-              <h3 class="mt-1 text-lg font-extrabold text-[#275891]">Staf Departemen Hubungan Masyarakat</h3>
-              <p class="text-sm">PPI Munich 2023</p>
-            </li>
-            <li class="relative mb-12">
-              <span class="absolute -left-3 top-1 h-3.5 w-3.5 rounded-full bg-[#a23e48]"></span>
-              <time class="block text-xs tracking-widest text-[#171614] font-semibold"">06.2023 – 11.2023</time>
-              <h3 class="mt-1 text-lg font-extrabold text-[#275891]">Ketua Divisi Publikasi IKA 2023</h3>
-              <p class="text-sm">PPI Munich</p>
-            </li>
-            <li class="relative mb-12">
-              <span class="absolute -left- top-1 h-3.5 w-3.5 rounded-full bg-[#a23e48]"></span>
-              <time class="block text-xs tracking-widest text-[#171614] font-semibold"">11.2023</time>
-              <h3 class="mt-1 text-lg font-extrabold text-[#275891]">Stage Manager II IKA 2023</h3>
-              <p class="text-sm">PPI Munich</p>
-            </li>
-          </ol>
 
-          <!-- Column 2 -->
-          <ol class="relative pl-10">
-            <span class="absolute left-4 top-0 bottom-0 w-px bg-[#171614]"></span>
-            <li class="relative mb-12">
-              <span class="absolute -left-1.5 top-1 h-3.5 w-3.5 rounded-full bg-[#a23e48]"></span>
-              <time class="block text-xs tracking-widest text-[#171614] font-semibold"">12.2023 – 12.2024</time>
-              <h3 class="mt-1 text-lg font-extrabold text-[#275891]">Ketua Umum</h3>
-              <p class="text-sm">PPI Munich 2023/2024</p>
-            </li>
-            <li class="relative mb-12">
-              <span class="absolute -left-1.5 top-1 h-3.5 w-3.5 rounded-full bg-[#a23e48]"></span>
-              <time class="block text-xs tracking-widest text-[#171614] font-semibold"">12.2023 – 09.2024</time>
-              <h3 class="mt-1 text-lg font-extrabold text-[#275891]">Kepala Departemen Pers dan Hubungan Masyarakat</h3>
-              <p class="text-sm">PPI Jerman 2023/2024</p>
-            </li>
-            <li class="relative mb-12">
-              <span class="absolute -left-1.5 top-1 h-3.5 w-3.5 rounded-full bg-[#a23e48]"></span>
-              <time class="block text-xs tracking-widest text-[#171614] font-semibold"">08.2024 – 11.2024</time>
-              <h3 class="mt-1 text-lg font-extrabold text-[#275891]">Penanggung Jawab Umum KAISER Munich 2024</h3>
-              <p class="text-sm">PPI Munich</p>
-            </li>
-            <li class="relative mb-12">
-              <span class="absolute -left-1.5 top-1 h-3.5 w-3.5 rounded-full bg-[#a23e48]"></span>
-              <time class="block text-xs tracking-widest text-[#171614] font-semibold"">10.2024 – 08.2025</time>
-              <h3 class="mt-1 text-lg font-extrabold text-[#275891]">Auditor Kegiatan Badan Pengawas Kegiatan dan Keuangan</h3>
-              <p class="text-sm">PPI Jerman 2024/2025</p>
-            </li>
-          </ol>
+    
+    <!-- ===== REKAM JEJAK ORGANISASI ===== -->
+<section id="experience" class="py-24">
+  <div class="max-w-7xl mx-auto px-6 lg:px-12">
+    <h2 class="text-4xl font-extrabold heading-font text-center text-[#275891] mb-12">Rekam Jejak Organisasi</h2>
 
-          <!-- Column 3 -->
-          <ol class="relative pl-10">
-            <span class="absolute left-4 top-0 bottom-0 w-px bg-[#171614]"></span>
-            <li class="relative mb-12">
-              <span class="absolute -left-1.5 top-1 h-3.5 w-3.5 rounded-full bg-[#a23e48]"></span>
-              <time class="block text-xs tracking-widest text-[#171614] font-semibold"">12.2024 – 12.2025</time>
-              <h3 class="mt-1 text-lg font-extrabold text-[#275891]">Anggota Dewan Pengawas Organisasi</h3>
-              <p class="text-sm">PPI Munich 2024/2025</p>
-            </li>
-            <li class="relative mb-12">
-              <span class="absolute -left-1.5 top-1 h-3.5 w-3.5 rounded-full bg-[#a23e48]"></span>
-              <time class="block text-xs tracking-widest text-[#171614] font-semibold"">07.2025 – 08.2025</time>
-              <h3 class="mt-1 text-lg font-extrabold text-[#275891]">Staf Divisi Hubungan Masyarakat PORSERA 2025</h3>
-              <p class="text-sm">PPI Hannover</p>
-            </li>
-            <li class="relative mb-12">
-              <span class="absolute -left-1.5 top-1 h-3.5 w-3.5 rounded-full bg-[#a23e48]"></span>
-              <time class="block text-xs tracking-widest text-[#171614] font-semibold"">12.2024 – 12.2025</time>
-              <h3 class="mt-1 text-lg font-extrabold text-[#275891]">Ketua Divisi Bazar Sambara Nusantara 2025</h3>
-              <p class="text-sm">PPI Munich</p>
-            </li>
-            <li class="relative">
-              <span class="absolute -left-1.5 top-1 h-3.5 w-3.5 rounded-full bg-[#a23e48]"></span>
-              <time class="block text-xs tracking-widest text-[#171614] font-semibold"">09.2025</time>
-              <h3 class="mt-1 text-lg font-extrabold text-[#275891]">Calon Ketua Umum PPI Jerman 2025/2026</h3>
-              <p class="text-sm">Nomor Urut 2</p>
-            </li>
-          </ol>
-        </div>
-      </div>
-    </section>
+    <div class="mt-16 grid gap-12 md:grid-cols-2 lg:grid-cols-3">
+      <ol class="relative">
+        <span class="absolute left-4 top-0 bottom-0 w-px bg-[#171614]"></span>
+
+        <li class="relative pl-8 mb-12">
+          <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
+          <time class="block text-xs tracking-widest font-semibold text-[#171614]"> 02.2023 – 12.2023 </time>
+          <h3 class="mt-1 text-lg font-extrabold text-[#275891]"> Staf Departemen Hubungan Masyarakat</h3>
+          <p class="text-sm">PPI Munich 2023</p>
+        </li>
+
+        <li class="relative pl-8 mb-12">
+          <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
+          <time class="block text-xs tracking-widest font-semibold text-[#171614]"> 06.2023 – 11.2023 </time>
+          <h3 class="mt-1 text-lg font-extrabold text-[#275891]"> Ketua Divisi Publikasi IKA 2023</h3>
+          <p class="text-sm">PPI Munich</p>
+        </li>
+
+        <li class="relative pl-8">
+          <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
+          <time class="block text-xs tracking-widest font-semibold text-[#171614]"> 11.2023 </time>
+          <h3 class="mt-1 text-lg font-extrabold text-[#275891]"> Stage Manager II IKA 2023</h3>
+          <p class="text-sm">PPI Munich</p>
+        </li>
+      </ol>
+
+      <!-- Column 2 -->
+      <ol class="relative">
+        <span class="absolute left-4 top-0 bottom-0 w-px bg-[#171614]"></span>
+
+        <li class="relative pl-8 mb-12">
+          <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
+          <time class="block text-xs tracking-widest font-semibold text-[#171614]"> 12.2023 – 12.2024 </time>
+          <h3 class="mt-1 text-lg font-extrabold text-[#275891]">Ketua Umum</h3> <p class="text-sm">PPI Munich 2023/2024</p></li>
+
+        <li class="relative pl-8 mb-12">
+          <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
+          <time class="block text-xs tracking-widest font-semibold text-[#171614]"> 12.2023 – 09.2024 </time>
+          <h3 class="mt-1 text-lg font-extrabold text-[#275891]"> Kepala Departemen Pers dan Hubungan Masyarakat</h3>
+          <p class="text-sm">PPI Jerman 2023/2024</p>
+        </li>
+
+        <li class="relative pl-8 mb-12">
+          <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
+          <time class="block text-xs tracking-widest font-semibold text-[#171614]"> 08.2024 – 11.2024 </time>
+          <h3 class="mt-1 text-lg font-extrabold text-[#275891]"> Penanggung Jawab Umum KAISER Munich 2024</h3>
+          <p class="text-sm">PPI Munich</p>
+        </li>
+
+        <li class="relative pl-8">
+          <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
+          <time class="block text-xs tracking-widest font-semibold text-[#171614]"> 10.2024 – 08.2025 </time>
+          <h3 class="mt-1 text-lg font-extrabold text-[#275891]"> Auditor Kegiatan Badan Pengawas Kegiatan dan Keuangan</h3>
+          <p class="text-sm">PPI Jerman 2024/2025</p>
+        </li>
+      </ol>
+
+      <!-- Column 3 -->
+      <ol class="relative">
+        <span class="absolute left-4 top-0 bottom-0 w-px bg-[#171614]"></span>
+
+        <li class="relative pl-8 mb-12">
+          <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
+          <time class="block text-xs tracking-widest font-semibold text-[#171614]"> 12.2024 – 12.2025 </time>
+          <h3 class="mt-1 text-lg font-extrabold text-[#275891]"> Anggota Dewan Pengawas Organisasi</h3>
+          <p class="text-sm">PPI Munich 2024/2025</p>
+        </li>
+
+        <li class="relative pl-8 mb-12">
+          <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
+          <time class="block text-xs tracking-widest font-semibold text-[#171614]"> 07.2025 – 08.2025 </time>
+          <h3 class="mt-1 text-lg font-extrabold text-[#275891]"> Staf Divisi Hubungan Masyarakat PORSERA 2025</h3>
+          <p class="text-sm">PPI Hannover</p>
+        </li>
+
+        <li class="relative pl-8 mb-12">
+          <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
+          <time class="block text-xs tracking-widest font-semibold text-[#171614]"> 12.2024 – 12.2025 </time>
+          <h3 class="mt-1 text-lg font-extrabold text-[#275891]"> Ketua Divisi Bazar Sambara Nusantara 2025</h3>
+          <p class="text-sm">PPI Munich</p>
+        </li>
+
+        <li class="relative pl-8">
+          <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
+          <time class="block text-xs tracking-widest font-semibold text-[#171614]"> 09.2025 </time>
+          <h3 class="mt-1 text-lg font-extrabold text-[#275891]"> Calon Ketua Umum PPI Jerman 2025/2026</h3>
+          <p class="text-sm">Nomor Urut 2</p>
+        </li>
+      </ol>
+
+    </div>
+  </div>
+</section>
+
+
 <!-- ===== BOX GRID (3 Columns, Redesigned) ===== -->
 <section id="timeline" class="py-24 bg-[#faf6ed]">
   <div class="max-w-7xl mx-auto px-6 lg:px-12">
