change proker layout

--- a/index.html
+++ b/index.html
@@ -279,35 +279,49 @@ Pendidikan
     </div>
   </div>
 </section>
-    <!-- ===== NUMBERED PINNED SEQUENCE (PARALLAX-LIKE) ===== -->
-    <section id="sequence" class="relative py-16">
-      <div class="max-w-6xl mx-auto px-6">
-        <div class="text-center mb-8 sm:mb-14">
-          <h2 data-aos="fade-up" class="text-3xl sm:text-5xl font-extrabold text-[#275891] heading-font">Program Kerja</h2>
-        </div>
-        <!-- Sticky display -->
-        <div class="sticky top-20 sm:top-24 md:top-28 h-[70vh] md:h-[80vh] flex items-center overflow-hidden">
-          <div id="seqDisplay" class="grid md:grid-cols-5 xl:grid-cols-7 gap-6 sm:gap-8 w-full items-center">
-            <div class="hidden md:block md:col-span-2 xl:col-span-3">
-              <div id="seqNumber" class="heading-font text-[#275891]/10 text-[28vw] md:text-[24vw] lg:text-[20vw] xl:text-[16vw] 2xl:text-[14vw] leading-none select-none transition duration-500 whitespace-nowrap z-0">01</div>
-            </div>
-            <div class="md:col-span-3 xl:col-span-4 relative z-10">
-              <div class="md:hidden heading-font text-[#275891]/15 text-6xl sm:text-8xl leading-none select-none transition duration-500 text-center" id="seqNumberMobile">01</div>
-              <h3 id="seqTitle" class="mt-3 sm:mt-4 text-xl sm:text-3xl font-bold text-[#275891] transition duration-500">PEMBENTUKAN DEPARTEMEN PERS DAN RELASI MEDIA</h3>
-              <p id="seqDesc" class="mt-2 sm:mt-3 text-slate-700 text-base sm:text-lg leading-relaxed transition duration-500 max-w-prose">Melalui press release, newsletter bulanan, dan kerja sama dengan media partner, departemen ini memastikan setiap informasi tersampaikan secara jelas, kredibel, dan terstruktur.Eksposur media juga menegaskan bahwa PPI Jerman beserta cabang tetap aktif, sekaligus meningkatkan visibilitas organisasi ke calon pemangku kepentingan eksternal, seperti sponsor, pembicara, dan pengisi acara, membuka peluang kolaborasi dan dukungan yang lebih luas. Dengan pendekatan ini, PPI Jerman tampil sebagai organisasi yang tajam, kritis, dan berani bersuara, serta aktif mendukung dan mengangkat prestasi anggotanya hingga dikenal di kancah internasional.</p>
-            </div>
-          </div>
-        </div>
+    
 
-        <!-- Scroll triggers (invisible, provide scroll length) -->
-        <div id="seqTriggers" class="space-y-24 sm:space-y-40 py-10 sm:py-20">
-          <div class="seq-trigger h-[75vh] sm:h-[90vh] md:h-screen" data-step="01" data-title="PEMBENTUKAN DEPARTEMEN PERS DAN RELASI MEDIA" data-desc="Melalui press release, newsletter bulanan, dan kerja sama dengan media partner, departemen ini memastikan setiap informasi tersampaikan secara jelas, kredibel, dan terstruktur.Eksposur media juga menegaskan bahwa PPI Jerman beserta cabang tetap aktif, sekaligus meningkatkan visibilitas organisasi ke calon pemangku kepentingan eksternal, seperti sponsor, pembicara, dan pengisi acara, membuka peluang kolaborasi dan dukungan yang lebih luas. Dengan pendekatan ini, PPI Jerman tampil sebagai organisasi yang tajam, kritis, dan berani bersuara, serta aktif mendukung dan mengangkat prestasi anggotanya hingga dikenal di kancah internasional."></div>
-          <div class="seq-trigger h-[75vh] sm:h-[90vh] md:h-screen" data-step="02" data-title="PELATIHAN KADERISASI" data-desc="Pelatihan Kaderisasi PPI Jerman merupakan program strategis yang bertujuan membekali pengurus dengan keterampilan organisasi, kepemimpinan, dan kolaborasi yang dapat diterapkan di dalam maupun di luar PPI. Program ini tidak hanya berfokus pada transfer pengetahuan, tetapi juga pada pembentukan karakter, solidaritas, dan kesiapan pengurus dalam menjaga kesinambungan organisasi.Sebagai program kerja kunci, pelatihan ini terbuka untuk seluruh pengurus PPI Jerman dan PPI cabang, sehinggaseluruh lini kepengurusan dapat berkembang secara selaras,memperkuat kesinambungan organisasi, dan memastikankaderisasi berjalan merata di tingkat nasional maupun internasional."></div>
-          <div class="seq-trigger h-[75vh] sm:h-[90vh] md:h-screen" data-step="03" data-title="CAREER & NETWORKING EVENT" data-desc="Career & Networking Event PPI Jerman merupakan program pengembangan diri bagi anggota untuk mempersiapkan masa depan profesional dan akademik. Acara ini mempertemukan mahasiswa dengan tenaga profesional, praktisi, dan mitra industri untuk berbagi pengalaman, membuka peluang karier,serta memperluas jaringan.Melalui seminar, workshop, mentoring, dan sesi networking, program ini memberikan akses pada wawasan dan peluang yang relevan dengan bidang masing-masing. Dengan demikian,PPI Jerman berkomitmen untuk mendukung kesuksesan karier anggotanya serta menjembatani hubungan antara mahasiswa dan dunia profesional di Jerman."></div>
-          <div class="seq-trigger h-[75vh] sm:h-[90vh] md:h-screen" data-step="04" data-title="NEXTCHAPTER DEUTSCHLAND" data-desc="NextChapter Deutschland hadir sebagai program yang ditujukan bagi pelajar dan mahasiswa baru Indonesia yang akan memulai perjalanan akademiknya di Jerman. Program ini menjadi langkah awal bagi mahasiswa baru untuk memahami kehidupan di Jerman, mulai dari hal-hal praktis sehari-hari hingga wawasan akademik dan sosial, sekaligus membekali mereka dengan panduan dan informasi praktis yang berguna. Untuk memaksimalkan jangkauan dan kemudahan akses, program ini akan disajikan dalam beberapa format: booklet yang diunggah di website PPI Jerman, webinar yang dilaksanakan satu kali setiap semester, serta video-video praktis yang akan diunggah di Instagram PPI Jerman. "></div>
-        </div>
-      </div>
-    </section>
+<!-- ===== Proker ===== -->
+<section id="sequence" class="py-16">
+  <div class="max-w-6xl mx-auto px-6">
+  <div class="text-center mb-12 sm:mb-16">
+    <h2 data-aos="fade-up" class="text-3xl sm:text-5xl font-extrabold text-[#275891] heading-font">Program Kerja</h2>
+  </div>
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-8 lg:gap-12 items-start">
+    <div class="md:col-span-1 flex flex-col gap-4" data-aos="fade-up">
+      <button
+        class="program-btn active flex items-center gap-4 w-full text-left p-4 rounded-lg transition-all duration-300 bg-[#275891] text-white shadow-lg" data-step="01">
+        <span class="btn-num text-2xl font-bold heading-font text-white">01</span>
+        <span class="font-semibold">PEMBENTUKAN DEPARTEMEN PERS DAN RELASI MEDIA</span>
+      </button>
+      <button
+        class="program-btn flex items-center gap-4 w-full text-left p-4 rounded-lg transition-all duration-300 bg-white text-slate-800 hover:bg-slate-50 hover:shadow-md" data-step="02">
+        <span class="btn-num text-2xl font-bold heading-font text-[#275891]">02</span>
+        <span class="font-semibold">PELATIHAN KADERISASI</span>
+      </button>
+      <button
+        class="program-btn flex items-center gap-4 w-full text-left p-4 rounded-lg transition-all duration-300 bg-white text-slate-800 hover:bg-slate-50 hover:shadow-md" data-step="03">
+        <span class="btn-num text-2xl font-bold heading-font text-[#275891]">03</span>
+        <span class="font-semibold">CAREER & NETWORKING EVENT</span>
+      </button>
+      <button
+        class="program-btn flex items-center gap-4 w-full text-left p-4 rounded-lg transition-all duration-300 bg-white text-slate-800 hover:bg-slate-50 hover:shadow-md" data-step="04">
+        <span class="btn-num text-2xl font-bold heading-font text-[#275891]">04</span>
+        <span class="font-semibold">NEXTCHAPTER DEUTSCHLAND</span>
+      </button>
+    </div>
+    <!-- Right: Content Display -->
+    <div class="md:col-span-2 min-h-[300px]" data-aos="fade-up" data-aos-delay="100">
+      <h3 id="seqTitle" class="text-2xl sm:text-3xl font-bold text-[#275891] transition-all duration-500 ease-out" >
+        PEMBENTUKAN DEPARTEMEN PERS DAN RELASI MEDIA
+      </h3>
+      <p id="seqDesc" class="mt-4 text-slate-700 text-base sm:text-lg leading-relaxed transition-all duration-500 ease-out max-w-prose">
+        Melalui press release, newsletter bulanan, dan kerja sama dengan media partner, departemen ini memastikan setiap informasi tersampaikan secara jelas, kredibel, dan terstruktur.Eksposur media juga menegaskan bahwa PPI Jerman beserta cabang tetap aktif, sekaligus meningkatkan visibilitas organisasi ke calon pemangku kepentingan eksternal, seperti sponsor, pembicara, dan pengisi acara, membuka peluang kolaborasi dan dukungan yang lebih luas. Dengan pendekatan ini, PPI Jerman tampil sebagai organisasi yang tajam, kritis, dan berani bersuara, serta aktif mendukung dan mengangkat prestasi anggotanya hingga dikenal di kancah internasional.
+      </p>
+    </div>
+    </div>
+  </div>
+</section>
     <!-- ===== TESTIMONIALS (placeholder) ===== -->
     <section id="testimonials" class="py-20">
       <div class="max-w-6xl mx-auto text-center">
@@ -322,112 +336,131 @@ Pendidikan
     </footer>
 
     <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
+     // Mobile menu toggle
+     const menuButton = document.getElementById("menuBtn");
+      const mobileMenu = document.getElementById("mobileMenu");
+      if (menuButton && mobileMenu) {
+        menuButton.addEventListener("click", () => {
+          const willOpen = mobileMenu.classList.contains("hidden");
+          mobileMenu.classList.toggle("hidden");
+          menuButton.setAttribute("aria-expanded", String(willOpen));
+        });
 
-    // Global reveal-on-scroll with AOS attributes
-    document.querySelectorAll('section, header, footer, img, h1, h2, h3, p, nav a').forEach((el, idx) => {
-    if (!el.getAttribute('data-aos')) {
-    el.setAttribute('data-aos', 'fade-up');
-    el.setAttribute('data-aos-delay', String(Math.min(200, (idx % 5) * 50)));
-    }
-    });
+        // Close menu when clicked
+        mobileMenu.querySelectorAll("a").forEach((link) => {
+          link.addEventListener("click", () => {
+            if (!mobileMenu.classList.contains("hidden")) {
+              mobileMenu.classList.add("hidden");
+              menuButton.setAttribute("aria-expanded", "false");
+            }
+          });
+        });
+      }
 
-    // Mobile menu toggle
-    const menuButton = document.getElementById('menuBtn');
-    const mobileMenu = document.getElementById('mobileMenu');
-    if (menuButton && mobileMenu) {
-    menuButton.addEventListener('click', () => {
-    const willOpen = mobileMenu.classList.contains('hidden');
-    mobileMenu.classList.toggle('hidden');
-    menuButton.setAttribute('aria-expanded', String(willOpen));
-    });
+      // AOS initialization
+      const addAosScript = () => {
+        const script = document.createElement("script");
+        script.src = "https://unpkg.com/aos@2.3.4/dist/aos.js";
+        script.onload = () => {
+          if (window.AOS) {
+            window.AOS.init({
+              duration: 700,
+              easing: "ease-out-cubic",
+              once: true,
+              offset: 80,
+            });
+          }
+        };
+        document.body.appendChild(script);
+      };
+      addAosScript();
 
-    // Close menu when clicked
-    mobileMenu.querySelectorAll('a').forEach((link) => {
-    link.addEventListener('click', () => {
-    if (!mobileMenu.classList.contains('hidden')) {
-    mobileMenu.classList.add('hidden');
-    menuButton.setAttribute('aria-expanded', 'false');
-    }
-    });
-    });
-    }
+      // Program Kerja button-based content switcher
+      const seqTitle = document.getElementById("seqTitle");
+      const seqDesc = document.getElementById("seqDesc");
+      const programBtns = Array.from(document.querySelectorAll(".program-btn"));
 
-    // AOS initialization
-    const addAosScript = () => {
-    const script = document.createElement('script');
-    script.src = 'https://unpkg.com/aos@2.3.4/dist/aos.js';
-    script.onload = () => {
-    if (window.AOS) {
-    window.AOS.init({
-    duration: 700,
-    easing: 'ease-out-cubic',
-    once: true,
-    offset: 80,
-    });
-    }
-    };
-    document.body.appendChild(script);
-    };
-    addAosScript();
+      // Content data
+      const programData = {
+        "01": {
+          title: "PEMBENTUKAN DEPARTEMEN PERS DAN RELASI MEDIA",
+          desc: "Melalui press release, newsletter bulanan, dan kerja sama dengan media partner, departemen ini memastikan setiap informasi tersampaikan secara jelas, kredibel, dan terstruktur.Eksposur media juga menegaskan bahwa PPI Jerman beserta cabang tetap aktif, sekaligus meningkatkan visibilitas organisasi ke calon pemangku kepentingan eksternal, seperti sponsor, pembicara, dan pengisi acara, membuka peluang kolaborasi dan dukungan yang lebih luas. Dengan pendekatan ini, PPI Jerman tampil sebagai organisasi yang tajam, kritis, dan berani bersuara, serta aktif mendukung dan mengangkat prestasi anggotanya hingga dikenal di kancah internasional.",
+        },
+        "02": {
+          title: "PELATIHAN KADERISASI",
+          desc: "Pelatihan Kaderisasi PPI Jerman merupakan program strategis yang bertujuan membekali pengurus dengan keterampilan organisasi, kepemimpinan, dan kolaborasi yang dapat diterapkan di dalam maupun di luar PPI. Program ini tidak hanya berfokus pada transfer pengetahuan, tetapi juga pada pembentukan karakter, solidaritas, dan kesiapan pengurus dalam menjaga kesinambungan organisasi.Sebagai program kerja kunci, pelatihan ini terbuka untuk seluruh pengurus PPI Jerman dan PPI cabang, sehinggaseluruh lini kepengurusan dapat berkembang secara selaras,memperkuat kesinambungan organisasi, dan memastikankaderisasi berjalan merata di tingkat nasional maupun internasional.",
+        },
+        "03": {
+          title: "CAREER & NETWORKING EVENT",
+          desc: "Career & Networking Event PPI Jerman merupakan program pengembangan diri bagi anggota untuk mempersiapkan masa depan profesional dan akademik. Acara ini mempertemukan mahasiswa dengan tenaga profesional, praktisi, dan mitra industri untuk berbagi pengalaman, membuka peluang karier,serta memperluas jaringan.Melalui seminar, workshop, mentoring, dan sesi networking, program ini memberikan akses pada wawasan dan peluang yang relevan dengan bidang masing-masing. Dengan demikian,PPI Jerman berkomitmen untuk mendukung kesuksesan karier anggotanya serta menjembatani hubungan antara mahasiswa dan dunia profesional di Jerman.",
+        },
+        "04": {
+          title: "NEXTCHAPTER DEUTSCHLAND",
+          desc: "NextChapter Deutschland hadir sebagai program yang ditujukan bagi pelajar dan mahasiswa baru Indonesia yang akan memulai perjalanan akademiknya di Jerman. Program ini menjadi langkah awal bagi mahasiswa baru untuk memahami kehidupan di Jerman, mulai dari hal-hal praktis sehari-hari hingga wawasan akademik dan sosial, sekaligus membekali mereka dengan panduan dan informasi praktis yang berguna. Untuk memaksimalkan jangkauan dan kemudahan akses, program ini akan disajikan dalam beberapa format: booklet yang diunggah di website PPI Jerman, webinar yang dilaksanakan satu kali setiap semester, serta video-video praktis yang akan diunggah di Instagram PPI Jerman.",
+        },
+      };
 
-    // Sticky stage number updater
-    const stageNumberEl = document.getElementById('stageNumber');
-    const stages = document.querySelectorAll('.stage');
-    if (stageNumberEl && stages.length) {
-    const io = new IntersectionObserver((entries) => {
-    // sort by intersection ratio to pick the most visible
-    const visible = entries
-    .filter(e => e.isIntersecting)
-    .sort((a, b) => b.intersectionRatio - a.intersectionRatio)[0];
-    if (visible) {
-    const step = visible.target.getAttribute('data-step');
-    if (step) stageNumberEl.textContent = step;
-    }
-    }, { root: null, threshold: [0.2, 0.4, 0.6, 0.8] });
-    stages.forEach((s) => io.observe(s));
-    }
+      if (seqTitle && seqDesc && programBtns.length) {
+        const updateDisplay = (step) => {
+          const data = programData[step];
+          if (!data) return;
 
-    // Parallax-like pinned sequence updater
-    const seqNumber = document.getElementById('seqNumber');
-    const seqNumberMobile = document.getElementById('seqNumberMobile');
-    const seqTitle = document.getElementById('seqTitle');
-    const seqDesc = document.getElementById('seqDesc');
-    const triggers = Array.from(document.querySelectorAll('#seqTriggers .seq-trigger'));
-    if (seqNumber && seqTitle && seqDesc && triggers.length) {
-    const updateDisplay = (step, title, desc) => {
-    [seqNumber, seqNumberMobile].forEach((el) => { if (el) el.textContent = step; });
-    seqTitle.textContent = title;
-    seqDesc.textContent = desc;
-    };
-    const obs = new IntersectionObserver((entries) => {
-    entries.forEach((entry) => {
-    if (entry.isIntersecting) {
-    const step = entry.target.getAttribute('data-step') || '';
-    const title = entry.target.getAttribute('data-title') || '';
-    const desc = entry.target.getAttribute('data-desc') || '';
-    // Animate fade on change
-    [seqTitle, seqDesc].forEach((el) => {
-    el.classList.add('opacity-0', '-translate-y-2');
-    setTimeout(() => {
-    updateDisplay(step, title, desc);
-    el.classList.remove('opacity-0', '-translate-y-2');
-    el.classList.add('opacity-100', 'translate-y-0');
-    }, 150);
-    });
-    [seqNumber, seqNumberMobile].forEach((el) => {
-    if (!el) return;
-    el.classList.add('opacity-0');
-    setTimeout(() => {
-    el.textContent = step;
-    el.classList.remove('opacity-0');
-    }, 150);
-    });
-    }
-    });
-    }, { threshold: 0.6 });
-    triggers.forEach((t) => obs.observe(t));
-    }
+          // Animate content change
+          [seqTitle, seqDesc].forEach((el) => {
+            el.classList.add("opacity-0", "-translate-y-2");
+            setTimeout(() => {
+              seqTitle.textContent = data.title;
+              seqDesc.textContent = data.desc;
+              el.classList.remove("opacity-0", "-translate-y-2");
+              el.classList.add("opacity-100", "translate-y-0");
+            }, 150);
+          });
+        };
+
+        // Button click handlers
+        programBtns.forEach((btn) => {
+          btn.addEventListener("click", () => {
+            const step = btn.getAttribute("data-step");
+
+            // Update all buttons to inactive state
+            programBtns.forEach((b) => {
+              b.classList.remove(
+                "active",
+                "bg-[#275891]",
+                "text-white",
+                "shadow-lg"
+              );
+              b.classList.add(
+                "bg-white",
+                "text-slate-800",
+                "hover:bg-slate-50",
+                "hover:shadow-md"
+              );
+              b.querySelector(".btn-num").classList.remove("text-white");
+              b.querySelector(".btn-num").classList.add("text-[#275891]");
+            });
+
+            // Set the clicked button to active state
+            btn.classList.add(
+              "active",
+              "bg-[#275891]",
+              "text-white",
+              "shadow-lg"
+            );
+            btn.classList.remove(
+              "bg-white",
+              "text-slate-800",
+              "hover:bg-slate-50",
+              "hover:shadow-md"
+            );
+            btn.querySelector(".btn-num").classList.add("text-white");
+            btn.querySelector(".btn-num").classList.remove("text-[#275891]");
+
+            // Update content
+            updateDisplay(step);
+          });
+        });
+      }
     </script>
   </body>
 </html>
