--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ Get started
           <h1 class="text-4xl sm:text-5xl lg:text-7xl font-extrabold leading-tight">
             <span class="text-[#275891] text-5xl sm:text-6xl md:text-7xl lg:text-8xl heading-font">Maria <br/>Patricia Viannisa</span><br/>
             <span class="text-[#171614] font-normal text-base sm:text-lg md:text-xl lg:text-2xl">Calon Ketua Umum PPI Jerman 2025/2026</span>
+            <span class="text-[#171614] font-normal text-base sm:text-lg md:text-xl lg:text-2xl">Nomor Urut 2</span>
           </h1>
         </div>
 
