--- a/index.html
+++ b/index.html
@@ -61,13 +61,12 @@ Get started
         <!-- Left content -->
         <div data-aos="fade-up">
           <h1 class="text-4xl sm:text-5xl lg:text-7xl font-extrabold leading-tight">
-            <span class="text-[#275891] text-5xl sm:text-6xl md:text-7xl lg:text-8xl heading-font">
-              Maria <br/> Patricia Viannisa
-            </span><br/>
-            <p class="text-[#171614] font-normal text-base sm:text-lg md:text-xl lg:text-2xl leading-snug">
-              Calon Ketua Umum PPI Jerman 2025/2026 <br/>
-              Nomor Urut 2
-            </p>
+            <span class="block text-[#275891] text-5xl sm:text-6xl md:text-7xl lg:text-8xl heading-font mb-4">
+              Maria <br/>Patricia Viannisa
+            </span>
+            <span class="block text-[#171614] font-normal text-base sm:text-lg md:text-xl lg:text-2xl leading-snug">
+              Calon Ketua Umum PPI Jerman 2025/2026 <br/>Nomor Urut 2
+            </span>
           </h1>
         </div>
 
