--- a/index.html
+++ b/index.html
@@ -80,18 +80,32 @@ Get started
       <div class="max-w-7xl mx-auto px-6 lg:px-12 grid lg:grid-cols-2 gap-12 items-center">
         <!-- Left: Text -->
         <div>
-          <h2 class="text-4xl font-extrabold heading-font text-[#275891] mb-6">Hi, aku Tricia!</h2>
+          <h2 class="text-4xl font-extrabold heading-font text-[#275891] mb-6">Halo, aku Tricia!</h2>
           <p class="text-base text-[#171614]/90 leading-relaxed mb-4">
-            Salam kenal! Sekarang aku sedang berkuliah S1/Bachelor semester enam jurusan Computational Linguistics di Ludwig-Maximillians-Universität (LMU) di Kota Munich.
+            Salam kenal! Saat ini aku sedang menempuh studi Bachelor Computational Linguistics di Ludwig Maximilian University of Munich.
             Aku lahir di Jakarta dan besar di Tangerang Selatan. Setelah lulus SMA jurusan Ilmu Pengetahuan Bahasa (IPB) pada tahun 2020, aku memutuskan untuk melanjutkan pendidikan di Jerman.
-            Pada Sommersemester 2021, aku memulai studi di Studienkolleg Mittelhessen, Philipps-Universität di Marburg, Hessen.
+            Pada Sommersemester 2021, aku pun memulai studi di Studienkolleg Mittelhessen, The Philipp University of Marburg.
+            Kemudian, sejak Oktober 2022, aku melanjutkan studi Bachelor di Munich.
           </p>
           <p class="text-base text-[#171614]/90 leading-relaxed mb-4">
-            Selama menjadi staf Departemen Hubungan Masyarakat di PPI Munich periode 2023, aku merasa sangat nyaman menjadi bagian dari sebuah organisasi bersama sesama pelajar Indonesia lainnya.
-            Aku mendapatkan banyak kesempatan untuk berkumpul, hingga akhirnya bertemu dengan banyak orang yang terasa seperti keluarga sendiri, menjadikan PPI Munich rumah kedua yang jauh dari tanah air.
+            Di samping studi, aku juga turut aktif berorganisasi di PPI Munich dan PPI Jerman.
+            Langkahku bersama PPI dimulai pada awal tahun 2023, di mana aku bergabung menjadi Staf Departemen Hubungan Masyarakat PPI Munich 2023.
+            Pada periode itu, aku pun dipercaya untuk menjadi Ketua Pelaksana Welcomming Party PPI Munich pada Sommersemester 2023 dan Wintersemester 2023/2024,
+            serta menjadi Ketua Divisi Publikasi acara malam budaya IKA yang diselenggarakan oleh PPI Munich dan Swadaya Indonesia München.
+
+            Lalu, pada bulan November 2023, aku diamanahkan menajdi Kepala Departemen Pers dan Hubungan Masyarakat PPI Jerman,
+            di mana aku memperdalam kemampuan kepemimpinanku dan mengembangkan keterampilan pers dan hubungan masyarakat dengan jangkauan yang lebih luas.
+            Bersama dengan 14 anggota departemen lainnya, kami berhasil menyuseskan 13 program kerja yang berjalan secara berkelanjutan selama 10 bulan periode PPI Jerman pada saat itu.
+
+            Satu bulan setelahnya, aku mendapatkan kepercayaan untuk menjadi Ketua Umum PPI Munich periode 2023/2024.
+            Pada periode ini, kami berhasil menjalankan 47 program kerja, salah satunya Sports and Culinary Festival perdana oleh PPI Munich, yaitu KAISER Munich.
+            Kami juga berhasil menyelenggarakan Career & Networking Session bersama IPA Germany, yang merupakan acara pertama PPI Munich dalam ranah pengembangan karier anggotanya.
+
+            Selama menjadi anggota pengurus PPI, aku merasa sangat nyaman menjadi bagian dari sebuah organisasi bersama sesama pelajar Indonesia lainnya.
+            Aku mendapatkan banyak kesempatan untuk berkumpul, hingga akhirnya bertemu dengan banyak orang yang terasa seperti keluarga sendiri, menjadikan PPI Munich dan PPI Jerman rumah yang jauh dari tanah air.
           </p>
           <p class="text-base text-[#171614]/90 leading-relaxed">
-            Terinspirasi dari semangat ini, motivasi terbesarku adalah untuk menjadikan PPI Munich sebagai organisasi yang dapat memberikan kenyamanan dan kehangatan tidak hanya untuk pengurus, tetapi juga untuk seluruh pelajar Indonesia di Munich.
+            Terinspirasi dari semangat ini, motivasi terbesarku adalah untuk menjadikan PPI Jerman sebagai organisasi yang dapat memberikan kenyamanan dan kehangatan tidak hanya untuk pengurus, tetapi juga untuk seluruh pelajar Indonesia di Jerman.
           </p>
         </div>
 
