spacing fix.html

--- a/index.html
+++ b/index.html
@@ -92,15 +92,18 @@ Get started
             Langkahku bersama PPI dimulai pada awal tahun 2023, di mana aku bergabung menjadi Staf Departemen Hubungan Masyarakat PPI Munich 2023.
             Pada periode itu, aku pun dipercaya untuk menjadi Ketua Pelaksana Welcomming Party PPI Munich pada Sommersemester 2023 dan Wintersemester 2023/2024,
             serta menjadi Ketua Divisi Publikasi acara malam budaya IKA yang diselenggarakan oleh PPI Munich dan Swadaya Indonesia München.
-
+          </p>
+          <p class="text-base text-[#171614]/90 leading-relaxed mb-4">
             Lalu, pada bulan November 2023, aku diamanahkan menajdi Kepala Departemen Pers dan Hubungan Masyarakat PPI Jerman,
             di mana aku memperdalam kemampuan kepemimpinanku dan mengembangkan keterampilan pers dan hubungan masyarakat dengan jangkauan yang lebih luas.
             Bersama dengan 14 anggota departemen lainnya, kami berhasil menyuseskan 13 program kerja yang berjalan secara berkelanjutan selama 10 bulan periode PPI Jerman pada saat itu.
-
+          </p>
+          <p class="text-base text-[#171614]/90 leading-relaxed mb-4">
             Satu bulan setelahnya, aku mendapatkan kepercayaan untuk menjadi Ketua Umum PPI Munich periode 2023/2024.
             Pada periode ini, kami berhasil menjalankan 47 program kerja, salah satunya Sports and Culinary Festival perdana oleh PPI Munich, yaitu KAISER Munich.
             Kami juga berhasil menyelenggarakan Career & Networking Session bersama IPA Germany, yang merupakan acara pertama PPI Munich dalam ranah pengembangan karier anggotanya.
-
+          </p>
+          <p class="text-base text-[#171614]/90 leading-relaxed mb-4">
             Selama menjadi anggota pengurus PPI, aku merasa sangat nyaman menjadi bagian dari sebuah organisasi bersama sesama pelajar Indonesia lainnya.
             Aku mendapatkan banyak kesempatan untuk berkumpul, hingga akhirnya bertemu dengan banyak orang yang terasa seperti keluarga sendiri, menjadikan PPI Munich dan PPI Jerman rumah yang jauh dari tanah air.
           </p>
