vismis fix.html

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Get started
       <div class="max-w-4xl mx-auto px-6 text-center">
         <h2 data-aos="fade-up" class="text-4xl sm:text-6xl font-bold text-[#f9dc5c] heading-font">Visi</h2>
         <p data-aos="fade-up" data-aos-delay="100" class="mt-6 text-xl sm:text-2xl text-[#f9dc5c] leading-relaxed">
-          Menjadikan PPI Jerman sebagai rumah bagi pelajar Indonesia di Jerman yang inklusif, inovatif, dan kolaboratif, guna mendukung pengembangan diri seluruh anggotanya
+          Menjadikan PPI Jerman sebagai rumah bagi pelajar Indonesia di Jerman yang inklusif, inovatif, dan kolaboratif, guna mendukung pengembangan diri seluruh anggotanya.
         </p>
       </div>
     </section>
@@ -137,26 +137,26 @@ Get started
           <!-- Left column -->
           <div class="space-y-8">
             <div>
-              <h3 data-aos="fade-up" data-aos-delay="0" class="text-lg leading-relaxed font-normal text-center md:text-left text-[#171614] max-w-prose md:max-w-[40ch] mx-auto md:mx-0">1. Membangun sistem internal organisasi yang Berkelanjutan dan berlandaskan semangat kekeluargaan</h3>
+              <h3 data-aos="fade-up" data-aos-delay="0" class="text-lg leading-relaxed font-normal text-center md:text-left text-[#171614] max-w-prose md:max-w-[40ch] mx-auto md:mx-0">1. Membangun sistem internal organisasi yang Berkelanjutan dan berlandaskan semangat kekeluargaan.</h3>
             </div>
             <div>
-              <h3 data-aos="fade-up" data-aos-delay="100" class="text-lg leading-relaxed font-normal text-center md:text-left text-[#171614] max-w-prose md:max-w-[40ch] mx-auto md:mx-0">3. Menjadikan PPI Jerman wadah pengembangan diri bagi para pelajar Indonesia di Jerman baik dalam bidang akademik maupun non-akademik</h3>
+              <h3 data-aos="fade-up" data-aos-delay="100" class="text-lg leading-relaxed font-normal text-center md:text-left text-[#171614] max-w-prose md:max-w-[40ch] mx-auto md:mx-0">3. Menjadikan PPI Jerman wadah pengembangan diri bagi para pelajar Indonesia di Jerman baik dalam bidang akademik maupun non-akademik.</h3>
             </div>
           </div>
           <!-- Right column -->
           <div class="space-y-8">
             <div>
-              <h3 data-aos="fade-up" data-aos-delay="200" class="text-lg leading-relaxed font-normal text-center md:text-left text-[#171614] max-w-prose md:max-w-[40ch] mx-auto md:mx-0">2. Membangun ruang komunikasi dan kolaborasi yang positif antara PPI cabang dan PPI Jerman</h3>
+              <h3 data-aos="fade-up" data-aos-delay="200" class="text-lg leading-relaxed font-normal text-center md:text-left text-[#171614] max-w-prose md:max-w-[40ch] mx-auto md:mx-0">2. Membangun ruang komunikasi dan kolaborasi yang positif antara PPI cabang dan PPI Jerman.</h3>
             </div>
             <div>
-              <h3 data-aos="fade-up" data-aos-delay="300" class="text-lg leading-relaxed font-normal text-center md:text-left text-[#171614] max-w-prose md:max-w-[40ch] mx-auto md:mx-0">4. Memanfaatkan teknologi digital untuk meningkatkan aksesibilitas informasi dan mengoptimalkan penyelenggaraan kegiatan</h3>
+              <h3 data-aos="fade-up" data-aos-delay="300" class="text-lg leading-relaxed font-normal text-center md:text-left text-[#171614] max-w-prose md:max-w-[40ch] mx-auto md:mx-0">4. Memanfaatkan teknologi digital untuk meningkatkan aksesibilitas informasi dan mengoptimalkan penyelenggaraan kegiatan.</h3>
             </div>
           </div>
         </div>
         <!-- Center block -->
         <div class="mt-12 max-w-3xl mx-auto text-center px-4">
           <div>
-            <h3 data-aos="fade-up" data-aos-delay="200" class="text-lg leading-relaxed text-[#171614]">5. Memperluas dan mempererat jejaring kerja sama dengan organisasi, komunitas, maupun elemen masyarakat lainnya di Jerman</h3>
+            <h3 data-aos="fade-up" data-aos-delay="200" class="text-lg leading-relaxed text-[#171614]">5. Memperluas dan mempererat jejaring kerja sama dengan organisasi, komunitas, maupun elemen masyarakat lainnya di Jerman.</h3>
           </div>
         </div>
       </div>
