pendidikan update.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -286,7 +287,7 @@ Pendidikan
         <h3 class="text-xl font-bold text-[#275891] leading-snug mb-2">
           Studienkolleg Mittelhessen
         </h3>
-        <p class="text-sm font-semibold text-[#171614]/80">Philipps-Universität Marburg</p>
+        <p class="text-sm font-semibold text-[#171614]/80">The Philipp University of Marburg</p>
       </div>
 
       <!-- Box 3 -->
@@ -295,7 +296,7 @@ Pendidikan
         <h3 class="text-xl font-bold text-[#275891] leading-snug mb-2">
           B.Sc. Computational Linguistics
         </h3>
-        <p class="text-sm font-semibold text-[#171614]/80">Ludwig-Maximilians-Universität München</p>
+        <p class="text-sm font-semibold text-[#171614]/80">The Ludwig Maximilian University of Munich</p>
       </div>
     </div>
   </div>
