--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ Pendidikan
       <button
         class="program-btn flex items-center gap-4 w-full text-left p-4 rounded-lg transition-all duration-300 bg-white text-slate-800 hover:bg-slate-50 hover:shadow-md" data-step="04">
         <span class="btn-num text-2xl font-bold heading-font text-[#275891]">04</span>
-        <span class="font-semibold">NEXTCHAPTER DEUTSCHLAND</span>
+        <span class="font-semibold">NEXTCHAPTER: DEUTSCHLAND</span>
       </button>
     </div>
     <!-- Right: Content Display -->
@@ -338,7 +338,7 @@ Pendidikan
         PEMBENTUKAN DEPARTEMEN PERS DAN RELASI MEDIA
       </h3>
       <p id="seqDesc" class="mt-4 text-slate-700 text-base sm:text-lg leading-relaxed transition-all duration-500 ease-out max-w-prose">
-        Melalui press release, newsletter bulanan, dan kerja sama dengan media partner, departemen ini memastikan setiap informasi tersampaikan secara jelas, kredibel, dan terstruktur.Eksposur media juga menegaskan bahwa PPI Jerman beserta cabang tetap aktif, sekaligus meningkatkan visibilitas organisasi ke calon pemangku kepentingan eksternal, seperti sponsor, pembicara, dan pengisi acara, membuka peluang kolaborasi dan dukungan yang lebih luas. Dengan pendekatan ini, PPI Jerman tampil sebagai organisasi yang tajam, kritis, dan berani bersuara, serta aktif mendukung dan mengangkat prestasi anggotanya hingga dikenal di kancah internasional.
+        Melalui press release, newsletter bulanan, dan kerja sama dengan media partner, departemen ini memastikan setiap informasi tersampaikan secara jelas, kredibel, dan terstruktur. Eksposur media juga menegaskan bahwa PPI Jerman beserta cabang tetap aktif, sekaligus meningkatkan visibilitas organisasi ke calon pemangku kepentingan eksternal, seperti sponsor, pembicara, dan pengisi acara, membuka peluang kolaborasi dan dukungan yang lebih luas. Dengan pendekatan ini, PPI Jerman tampil sebagai organisasi yang tajam, kritis, dan berani bersuara, serta aktif mendukung dan mengangkat prestasi anggotanya hingga dikenal di kancah internasional.
       </p>
     </div>
     </div>
@@ -406,19 +406,19 @@ Pendidikan
       const programData = {
         "01": {
           title: "PEMBENTUKAN DEPARTEMEN PERS DAN RELASI MEDIA",
-          desc: "Melalui press release, newsletter bulanan, dan kerja sama dengan media partner, departemen ini memastikan setiap informasi tersampaikan secara jelas, kredibel, dan terstruktur.Eksposur media juga menegaskan bahwa PPI Jerman beserta cabang tetap aktif, sekaligus meningkatkan visibilitas organisasi ke calon pemangku kepentingan eksternal, seperti sponsor, pembicara, dan pengisi acara, membuka peluang kolaborasi dan dukungan yang lebih luas. Dengan pendekatan ini, PPI Jerman tampil sebagai organisasi yang tajam, kritis, dan berani bersuara, serta aktif mendukung dan mengangkat prestasi anggotanya hingga dikenal di kancah internasional.",
+          desc: "Melalui press release, newsletter bulanan, dan kerja sama dengan media partner, departemen ini memastikan setiap informasi tersampaikan secara jelas, kredibel, dan terstruktur. Eksposur media juga menegaskan bahwa PPI Jerman beserta cabang tetap aktif, sekaligus meningkatkan visibilitas organisasi ke calon pemangku kepentingan eksternal, seperti sponsor, pembicara, dan pengisi acara, membuka peluang kolaborasi dan dukungan yang lebih luas. Dengan pendekatan ini, PPI Jerman tampil sebagai organisasi yang tajam, kritis, dan berani bersuara, serta aktif mendukung dan mengangkat prestasi anggotanya hingga dikenal di kancah internasional.",
         },
         "02": {
           title: "PELATIHAN KADERISASI",
-          desc: "Pelatihan Kaderisasi PPI Jerman merupakan program strategis yang bertujuan membekali pengurus dengan keterampilan organisasi, kepemimpinan, dan kolaborasi yang dapat diterapkan di dalam maupun di luar PPI. Program ini tidak hanya berfokus pada transfer pengetahuan, tetapi juga pada pembentukan karakter, solidaritas, dan kesiapan pengurus dalam menjaga kesinambungan organisasi.Sebagai program kerja kunci, pelatihan ini terbuka untuk seluruh pengurus PPI Jerman dan PPI cabang, sehinggaseluruh lini kepengurusan dapat berkembang secara selaras,memperkuat kesinambungan organisasi, dan memastikankaderisasi berjalan merata di tingkat nasional maupun internasional.",
+          desc: "Pelatihan Kaderisasi PPI Jerman merupakan program strategis yang bertujuan membekali pengurus dengan keterampilan organisasi, kepemimpinan, dan kolaborasi yang dapat diterapkan di dalam maupun di luar PPI. Program ini tidak hanya berfokus pada transfer pengetahuan, tetapi juga pada pembentukan karakter, solidaritas, dan kesiapan pengurus dalam menjaga kesinambungan organisasi.Sebagai program kerja kunci, pelatihan ini terbuka untuk seluruh pengurus PPI Jerman dan PPI cabang, sehinggaseluruh lini kepengurusan dapat berkembang secara selaras, memperkuat kesinambungan organisasi, dan memastikankaderisasi berjalan merata di tingkat nasional maupun internasional.",
         },
         "03": {
           title: "CAREER & NETWORKING EVENT",
-          desc: "Career & Networking Event PPI Jerman merupakan program pengembangan diri bagi anggota untuk mempersiapkan masa depan profesional dan akademik. Acara ini mempertemukan mahasiswa dengan tenaga profesional, praktisi, dan mitra industri untuk berbagi pengalaman, membuka peluang karier,serta memperluas jaringan.Melalui seminar, workshop, mentoring, dan sesi networking, program ini memberikan akses pada wawasan dan peluang yang relevan dengan bidang masing-masing. Dengan demikian,PPI Jerman berkomitmen untuk mendukung kesuksesan karier anggotanya serta menjembatani hubungan antara mahasiswa dan dunia profesional di Jerman.",
+          desc: "Career & Networking Event PPI Jerman merupakan program pengembangan diri bagi anggota untuk mempersiapkan masa depan profesional dan akademik. Acara ini mempertemukan mahasiswa dengan tenaga profesional, praktisi, dan mitra industri untuk berbagi pengalaman, membuka peluang karier, serta memperluas jaringan. Melalui seminar, workshop, mentoring, dan sesi networking, program ini memberikan akses pada wawasan dan peluang yang relevan dengan bidang masing-masing. Dengan demikian, PPI Jerman berkomitmen untuk mendukung kesuksesan karier anggotanya serta menjembatani hubungan antara mahasiswa dan dunia profesional di Jerman.",
         },
         "04": {
           title: "NEXTCHAPTER DEUTSCHLAND",
-          desc: "NextChapter Deutschland hadir sebagai program yang ditujukan bagi pelajar dan mahasiswa baru Indonesia yang akan memulai perjalanan akademiknya di Jerman. Program ini menjadi langkah awal bagi mahasiswa baru untuk memahami kehidupan di Jerman, mulai dari hal-hal praktis sehari-hari hingga wawasan akademik dan sosial, sekaligus membekali mereka dengan panduan dan informasi praktis yang berguna. Untuk memaksimalkan jangkauan dan kemudahan akses, program ini akan disajikan dalam beberapa format: booklet yang diunggah di website PPI Jerman, webinar yang dilaksanakan satu kali setiap semester, serta video-video praktis yang akan diunggah di Instagram PPI Jerman.",
+          desc: "NextChapter: Deutschland hadir sebagai program yang ditujukan bagi pelajar dan mahasiswa baru Indonesia yang akan memulai perjalanan akademiknya di Jerman. Program ini menjadi langkah awal bagi mahasiswa baru untuk memahami kehidupan di Jerman, mulai dari hal-hal praktis sehari-hari hingga wawasan akademik dan sosial, sekaligus membekali mereka dengan panduan dan informasi praktis yang berguna. Untuk memaksimalkan jangkauan dan kemudahan akses, program ini akan disajikan dalam beberapa format: booklet yang diunggah di website PPI Jerman, webinar yang dilaksanakan satu kali setiap semester, serta video-video praktis yang akan diunggah di Instagram PPI Jerman.",
         },
       };
 
